{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 19,
  "lineage": "dccc981b-8a3b-fb93-f17a-ea955609f04f",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "portfolio-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/web-app-portfoilio",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "nginx"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "name": "web-app-portfolio"
                },
                "name": "web-app-portfoilio",
                "namespace": "default",
                "resource_version": "308",
                "uid": "a7115fed-79ab-484f-8e0f-edf2cf6eb19c"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "web-app-portfolio.mbanugo.bulgogi174.messwithdns.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "web-app-portfolio",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "civo_firewall.fw_project",
            "civo_kubernetes_cluster.k8s_demo_1",
            "data.civo_size.medium"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "shop-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "sock-shop/sock-shop",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "nginx"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "name": "web-app"
                },
                "name": "sock-shop",
                "namespace": "sock-shop",
                "resource_version": "310",
                "uid": "103d1c2e-936c-4611-bf94-73c25cb494b8"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "sock-shop.mbanugo.bulgogi174.messwithdns.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "web-app",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "civo_firewall.fw_project",
            "civo_kubernetes_cluster.k8s_demo_1",
            "data.civo_size.medium"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "certmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "certmanager",
            "metadata": [
              {
                "generation": 0,
                "name": "certmanager",
                "resource_version": "502",
                "uid": "6dd3d6c3-0a3a-446e-ae1d-162169c50903"
              }
            ]
          },
          "dependencies": [
            "civo_firewall.fw_project",
            "civo_kubernetes_cluster.k8s_demo_1",
            "data.civo_size.medium",
            "time_sleep.wait_for_kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "kube-namespace",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "sock-shop",
            "metadata": [
              {
                "generation": 0,
                "name": "sock-shop",
                "resource_version": "309",
                "uid": "6a7a01ea-7e84-4b6c-83bd-4e979fa4ed5a"
              }
            ]
          },
          "dependencies": [
            "civo_firewall.fw_project",
            "civo_kubernetes_cluster.k8s_demo_1",
            "data.civo_size.medium"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "traefik",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "traefik",
            "metadata": [
              {
                "generation": 0,
                "name": "traefik",
                "resource_version": "503",
                "uid": "0610bb74-52a9-41dd-a730-50e30781d1c7"
              }
            ]
          },
          "dependencies": [
            "civo_firewall.fw_project",
            "civo_kubernetes_cluster.k8s_demo_1",
            "data.civo_size.medium",
            "time_sleep.wait_for_kubernetes"
          ]
        }
      ]
    }
  ]
}